# seasenselib

./: Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/source/: about.rst  api_reference.rst  developers_guide.rst  index.rst  reader_notes.rst  supported_formats.rst
seasenselib/: __init__.py  _version.py  api.py  parameters.py
seasenselib/cli/: parser.py  router.py
seasenselib/cli/commands/: data_commands.py  info_commands.py  plot_commands.py
seasenselib/config/: __init__.py
seasenselib/config/pipeline/: __init__.py  default.json  full.json  minimal.json
seasenselib/core/: autodiscovery.py  factories.py  io_manager.py
seasenselib/knowledge/: __init__.py  loader.py
seasenselib/pipeline/: __init__.py  base.py  config.py  factory.py  handler_catalog.py  handler_registry.py  interfaces.py  pipeline.py  registry.py  utils.py
seasenselib/pipeline/derivation/: __init__.py  stage.py
seasenselib/plotters/: base.py  depth_profile_plotter.py  time_series_plotter.py  ts_diagram_plotter.py
seasenselib/readers/: adcp_matlab_rdadcp_reader.py  adcp_matlab_uhhds_reader.py  base.py  nortek_ascii_reader.py  nortek_csv_reader.py  nortek_raw_reader.py  rbr_ascii_reader.py  rbr_hex_reader.py  rbr_matlab_legacy_reader.py  rbr_matlab_reader.py  rbr_matlab_rsktools_reader.py  rbr_rsk_auto_reader.py  rbr_rsk_legacy_reader.py  rbr_rsk_reader.py  rcm_matlab_reader.py  rdi_raw_reader.py  sbe_ascii_reader.py  sbe_cnv_reader.py  sbe_hex_reader.py  seasun_tob_reader.py
seasenselib/writers/: base.py  csv_writer.py  excel_writer.py  netcdf_writer.py
tests/: conftest.py  test_parameters_consistency.py  test_readers_completeness.py  test_version.py
tests/cli/: test_list_pipeline_profiles.py  test_logging.py  test_pipeline_cli_controls.py  test_processing_protocol.py
tests/pipelines/: test_base.py  test_integration.py  test_pipeline.py  test_pipeline_profiles.py  test_pipeline_utils.py
tests/readers/: test_nortek_ascii_reader.py  test_nortek_csv_reader.py  test_nortek_raw_reader.py  test_rbr_ascii_reader.py  test_rbr_hex_reader.py  test_rbr_matlab_legacy_reader.py  test_rdi_raw_reader.py  test_sbe_ascii_reader.py  test_sbe_cnv_reader.py  test_sbe_hex_reader.py
tests/writers/: test_csv_writer.py  test_netcdf_writer.py
(+89 files in other folders)
