[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "seasenselib"
version = "0.5.1"
description = "Read, convert, and plot oceanographic sensor data."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Eleanor Frajka-Williams" },
  { name = "Isabelle Schmitz" },
  { name = "Yves Sorge" }
]

maintainers = [
  { name = "Yves Sorge", email = "yves.sorge@uni-hamburg.de" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Oceanography",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License"
]

keywords = [
  "ctd",
  "oceanography",
  "cnv",
  "seabird",
  "rbr",
  "aquadopp",
  "microcat",
  "sensors",
  "moorings",
  "data",
  "netcdf",
  "cf",
  "conventions",
  "tools",
  "plotting",
  "adcp"
]

dependencies = [
  "pycnv",
  "pandas",
  "xarray",
  "numpy",
  "scipy",
  "pylablib",
  "matplotlib",
  "netcdf4",
  "pint",
  "gsw",
  "pyrsktools",
  "seabirdscientific>=1.2.0",
  "setuptools",
  "importlib-metadata>=1.0; python_version<'3.8'"
]

[project.optional-dependencies]
dev = [
  "build",
  "twine",
  "sphinx",
  "nbsphinx",
  "myst-parser",
  "sphinx_rtd_theme",
  "pytest"
]

[project.urls]
Homepage    = "https://ocean-uhh.github.io/seasenselib/"
Source_Code = "https://github.com/ocean-uhh/seasenselib"
Download    = "https://pypi.org/project/seasenselib/"

[project.scripts]
seasenselib = "seasenselib.__main__:main"


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"seasenselib.knowledge" = ["**/*.json"]
"seasenselib.config.pipeline" = ["*.json"]
